# buildflow-ai

./: .gitignore  README.md  docker-compose.demo.yml  index.html  render.yaml
api/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  start-mock-8011.ps1
api/app/: main.py
api/app/core/: config.py  errors.py  logging.py
api/app/db/: session.py
api/app/llm/: base.py  multi_agent_models.py  provider.py
api/app/models/: artifact.py  clarification.py  project.py  run.py
api/app/prompts/: clarification_prompt.py  demo_prompt.py  planning_prompt.py  prd_prompt.py  task_breakdown_prompt.py
api/app/repositories/: artifact_repository.py  clarification_repository.py  project_repository.py  run_repository.py
api/app/routers/: clarifications.py  demo.py  exports.py  planning.py  prd.py  projects.py  runs.py  task_breakdown.py
api/app/schemas/: artifact.py  clarification.py  common.py  demo.py  planning.py  prd.py  project.py  run.py  task_breakdown.py
api/app/services/: clarification_service.py  demo_service.py  export_service.py  planning_service.py  prd_service.py  project_service.py  task_breakdown_service.py
api/app/workflows/: clarification_workflow.py  demo_workflow.py  planning_workflow.py  prd_workflow.py  task_breakdown_workflow.py
api/tests/: conftest.py  test_llm_provider.py  test_main_flow.py
docs/: api-spec-v0.1.md  architecture-v0.1.md  deployment.md  e2e-testing.md  iteration-v0.2-alpha-planning.md  portfolio-case-study.md  prd-v0.1.md  profile-copy.md  showcase-kit.md
scripts/: dev.ps1  e2e.ps1  showcase.ps1  test.ps1  (+1 more)
(+38 files in other folders)
